--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
             <p id="ready"></p>
             <h3 id="result">save canvas result...</h3>
             <p>This app uses cordova-save-image-gallery plugin<br>https://github.com/agomezmoron/cordova-save-image-gallery</p>
-            <canvas id="myCanvas"></canvas>
+            <!-- <canvas id="myCanvas"></canvas> -->
         </div>
         <div><a id="save" class="btn" href="">save</a></div>
     </div>
