--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,11 @@
         <div>
             <p id="ready"></p>
             <h3 id="result">save canvas result...</h3>
-            <p>This app uses cordova-save-image-gallery plugin<br>https://github.com/agomezmoron/cordova-save-image-gallery</p>
+            <p>This app uses cordova-save-image-gallery plugin</p>
+            <p>https://github.com/agomezmoron/cordova-save-image-gallery</p>
+            <p>it creates an invisible canvas element (display:none)</p>
+            <p>loads a remote image into the canvas</p>
+            <p>Then the button below downloads that image into the device photo gallery</p>
             <!-- <canvas id="myCanvas"></canvas> -->
         </div>
         <div><a id="save" class="btn" href="">save</a></div>
